Completed implementation for all User related endpoints
