# main.go
@@ -18,7 +18,7 @@ import (
 // @version 0.0
 // @description A lightweight API for managing movie social media data
 // @host localhost:8080
-// @BasePath 
+// @BasePath
 func main() {
 	// connect to db
 	db, err := database.InitDB()
@@ -31,17 +31,28 @@ func main() {
 
 	// Setup the Gin server
 	server := gin.Default()
+	gin.SetMode(gin.ReleaseMode)
+	server.SetTrustedProxies([]string{"127.0.0.1"})
+	
 
 	// Initialize all layers
-	repo := repositories.Repository{DB: db}
-	sc := services.Services{Repo: &repo}
+	repo := repositories.UserRepository{DB: db}
+	sc := services.UserServices{Repo: &repo}
 	uc := controllers.UserController{Service: &sc}
 
 	// Initialize Routes
 	server.GET("/users", uc.GetAllUsers)
+	server.GET("/user/:id", uc.GetUserByID)
+	server.GET("/user/username/:username", uc.GetUserByUsername)
+
 	server.POST("/user", uc.UploadNewUser)
+	server.DELETE("/user/:id", uc.DeleteUserByID)
+	
 
 	server.GET("/swagger/*any", ginSwagger.WrapHandler(swaggerFiles.Handler))
 
-	server.Run(":8080")
+	
+	if err := server.Run(":8080"); err != nil {
+        log.Fatalf("Failed to start server: %v", err)
+    }
 }
